--- a/docker-compose1.yml
+++ b/docker-compose1.yml
@@ -4,7 +4,7 @@ services:
   mongo:
     build:
       context: .
-      dockerfile: mongodb.dockerfile
+      dockerfile: ./mongodb/mongodb.dockerfile
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: myuser
