--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,10 @@
     "helmet": "^6.0.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
