--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
