--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.15.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^114.0.0",
     "helmet": "^6.0.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
@@ -28,6 +29,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
