--- a/backend/package.json
+++ b/backend/package.json
@@ -28,10 +28,13 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mongodb": "^5.1.0",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
