--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.15.0",
     "fs": "^0.0.1-security",
+    "googleapi": "^1.0.2",
     "googleapis": "^114.0.0",
     "handlebar": "^1.0.0",
     "helmet": "^6.0.1",
@@ -30,6 +31,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
+    "natural": "^6.2.0",
     "nodemailer": "^6.9.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
