--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "natural": "^6.2.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
