--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "request-ip": "^3.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
     "@types/redux-logger": "^3.0.9",
+    "@types/request-ip": "^0.0.37",
     "tailwindcss": "^3.3.1"
   }
 }
