--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "natural": "^6.2.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
+    "stripe": "^12.1.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-mongodb": "^5.1.1"
