--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +14,11 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3modal/ethereum": "^2.3.0",
+    "@web3modal/react": "^2.3.0",
     "axios": "^1.3.4",
+    "ethers": "^5.7.2",
     "formik": "^2.2.9",
     "i": "^0.3.7",
     "npm": "^9.6.4",
@@ -30,7 +36,10 @@
     "redux-thunk": "^2.4.2",
     "request-ip": "^3.3.0",
     "typescript": "^4.9.5",
+    "wagmi": "^0.12.10",
+    "walletlink": "^2.5.0",
     "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.12",
     "yup": "^1.0.2"
   },
   "scripts": {
