--- a/seller-dashboard/package.json
+++ b/seller-dashboard/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "chart.js": "^4.2.1",
+    "install": "^0.13.0",
+    "npm": "^9.6.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
