--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "typescript": "^4.9.5",
     "walletlink": "^2.5.0",
     "web-vitals": "^2.1.4",
+    "web3": "^1.9.0",
     "web3modal": "^1.9.12",
     "yup": "^1.0.2"
   },
